added form with usernames and password - usercreationform on register route

--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Menu</title>
     </head>
-    <mody>
+    <body>
         <h1>Menu</h1>
         <ul>
             {% for pizza in pizzas %}
@@ -12,5 +12,5 @@
             </li>
             {% endfor %}
         </ul>
-    </mody>
+    </body>
 </html>
