added base.html template and updated index.html

--- a/orders/templates/orders/register.html
+++ b/orders/templates/orders/register.html
@@ -7,7 +7,7 @@
         <h1>Register</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }} <!--  from as paragraph -->
+            {{ form.as_p }} <!--  form as paragraph -->
             <button type="submit">Register</button>
         </form>
     </body>
