--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -1,3 +1,21 @@
+{% extends "orders/base.html" %}
+
+{% block title %}
+    Pizza
+{% endblock %}
+
+{% block body %}
+    <h1>Pizza</h1>
+
+    <hr>
+
+    <a href="{% url 'register' %}">Register</a>
+    <a href="{% url 'login' %}">Login</a>
+
+{% endblock %}
+
+
+<!-- 
 <!DOCTYPE html>
 <html>
     <head>
@@ -13,4 +31,4 @@
             {% endfor %}
         </ul>
     </body>
-</html>
+</html> -->
