--- a/orders/templates/orders/base.html
+++ b/orders/templates/orders/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Users</title>
+        <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
         {% block body %}
