--- a/orders/templates/orders/register.html
+++ b/orders/templates/orders/register.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Register</title>
-    </head>
-    <body>
-        <h1>Register</h1>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }} <!--  form as paragraph -->
-            <button type="submit">Register</button>
-        </form>
-    </body>
-</html>
+{% extends "orders/base.html" %}
+
+{% block title %}
+    Register
+{% endblock %}
+
+{% block body %}
+    <h1>Register</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }} <!--  form as paragraph -->
+        <button type="submit">Register</button>
+    </form>
+{% endblock %}
