--- a/orders/templates/orders/user.html
+++ b/orders/templates/orders/user.html
@@ -53,5 +53,9 @@
             <input type="submit" value="Add to cart"/>
         </form>
     {% endif %}
+    {% if cart %}
+        <h3>Shopping Cart</h3>
+        <p>{{ cart }}</p>
 
+    {% endif %}
 {% endblock %}
