--- a/orders/templates/orders/base.html
+++ b/orders/templates/orders/base.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>{% block title %}{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% load static %} 
+        <script src="{% static 'orders/app.js' %}"></script>
     </head>
     <body>
         {% block body %}
