--- a/orders/templates/orders/user.html
+++ b/orders/templates/orders/user.html
@@ -27,27 +27,27 @@
             {% csrf_token %}
             
 
-            <select name="pizza_name">
+            <select id="pizza_name" name="pizza_name">
                 <!-- <option>Select pizza</option> -->
                 {% for pizza_name in pizza_names %}
                     <option value="{{ pizza_name.id }}">{{ pizza_name }}</option>
                 {% endfor %}
             </select>
 
-            <select name="pizza_size">
+            <select id="pizza_size" name="pizza_size">
                 <!-- <option>Select size</option> -->
                 {% for pizza_size in pizza_sizes %}
                     <option value="{{ pizza_size.id }}">{{ pizza_size }}</option>
                 {% endfor %}
             </select>
 
-            <select name="pizza_topping_combo">
+            <select id="pizza_topping_combo" name="pizza_topping_combo">
                 {% for pizza_topping_combo in pizza_topping_combos %}
                     <option value="{{ pizza_topping_combo.id}}">{{ pizza_topping_combo }}</option>
                 {% endfor %}
             </select>
 
-            <select name="pizza_toppings" multiple>
+            <select id="pizza_toppings" name="pizza_toppings" multiple>
                 {% for pizza_topping in pizza_toppings %}
                     <option value="{{ pizza_topping.id }}">{{ pizza_topping }}</option>
                 {% endfor %}
@@ -57,7 +57,7 @@
             <label for="count">Quantity (between 1 and 5):</label>
             <input type="number" id="quantity" name="count" min="1" max="5" value="1">
 
-
+            <span id="pizza_price"> </span>
             <input type="submit" value="Add to cart"/>
         </form>
     {% endif %}
