added success.html template, added order view, added place order form, added order URL

--- a/orders/templates/orders/user.html
+++ b/orders/templates/orders/user.html
@@ -61,9 +61,6 @@
     {% if cart %}
         <h3>Shopping Cart</h3>
         
-        
-        <!-- <p> {{ cart }} </p> -->
-        
         <ul>
             {% for unit in cart %}
                 {% for pizza in unit.pizzas.all %}
@@ -71,17 +68,27 @@
                 {% endfor %}
             {% endfor %}
         </ul>    
+        
+        <hr>
+
         <span id="total_price">Total price: {{ cart.0.price }} $</span>
         <!-- will be able to use this shorter cycle when we can get just the order and not a list of orders.  -->
         <!-- <ul>
             {% for pizza in cart.pizzas.all %}
                 <li>{{ pizza }}</li>            
             {% endfor %}
-                
         </ul>   -->
             
+    
+        <h2>Submit Order</h2>
+
+        <form action="{% url 'order' %}" method="post">
+            {% csrf_token %}
+            <label for="address">Add Address (city, street)</label><br>
+            <input id="address" name="address" type="text"/>
+            <input type="submit" value="Submit Order"/>
+        </form>
+
+
     {% endif %}
-    <form>
-        {% csrf_token %}
-    </form>
 {% endblock %}
