before adding price field to add-ons

--- a/orders/templates/orders/user.html
+++ b/orders/templates/orders/user.html
@@ -5,12 +5,14 @@
 {% endblock %}
 
 {% block body %}
+    <!-- #region User -->
     <h1>Hello, {{ user.first_name }}</h1>
     <ul>
         <li>Currently logged in as: {{ user.username}}, {{ user.id }}</li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
     </ul>
-    
+    <!-- #endregion User -->
+
     <!-- #region Orders -->
     {% if pending_orders %}
         <h2>Pending Orders</h2>
