designing readme.md

--- a/orders/templates/orders/user.html
+++ b/orders/templates/orders/user.html
@@ -8,7 +8,7 @@
     <!-- #region User -->
     <h1>Hello, {{ user.first_name }}</h1>
     <ul>
-        <li>Currently logged in as: {{ user.username}}, {{ user.id }}</li>
+        <li>Currently logged in as: {{ user.username}}</li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
     </ul>
     <!-- #endregion User -->
